# riscv-verilog

./: .gitignore  .gitmodules  README.md  cpu.v  cpu_tb.v  ifu.v  inst_mem.v  reg_file.v
src/: CMakeLists.txt  alu.v  aludec.v  aluop.v  consts.v  control.v  controller.v  cpu.v  cpu_run.v  datamem.v  datapath.v  decoder.v  dmem.v  flopr.v  ifu.v  imem.v  immSel.v  instrmem.v  main.cpp  maindec.v  opcodes.v  reg_file.v  regfile.v  riscv.v  top.v  top_tf.v
tests/: fib.cc  fib.out  func.cc  func.out  generate_elf.sh  xor.cc  xor.out
